Fixed overflow bug

--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -104,6 +104,7 @@
     margin: 0;
     padding: 0;
     display: none;
+    overflow-x: hidden;
 
     @include sizes($breakpoint){
       display: flex;
